tests/generics_type_value_prefix_bad.stderr
tests/generics_type_value_prefix_bad.sl:7:18: error: SL2002: unknown identifier 'Vector'
